# sel4test

./: CMakeLists.txt
apps/aepbench/: CMakeLists.txt  Kbuild  Kconfig  Makefile
apps/aepbench/src/: bench.sh  main.c  notifycost.c  notifycost.h  pingpong.c  pingpong.h  timer.c  timer.h  utils.c  utils.h
apps/fglbench/: CMakeLists.txt
apps/fglbench/src/: bench.sh  benchmarks.c  benchmarks.h  graph.py  main.c  timer.c  utils.h
apps/mptest/: CMakeLists.txt  Kbuild  Kconfig  Makefile
apps/mptest/src/: main.c
apps/sel4test-driver/: CMakeLists.txt
apps/sel4test-driver/include/: test_init_data.h
apps/sel4test-driver/src/: main.c
apps/sel4test-tests/: CMakeLists.txt
apps/sel4test-tests/src/: helpers.c  main.c
apps/sel4test-tests/src/tests/: allocations.c  ipc.c
